[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
name = "stomping"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.6"
thiserror = "1.0.9"
nom = "5.0.1"
bytes = "0.5.3"
maplit = "1.0.2"
tokio = {version="0.2.11", features=["sync", "stream", "tcp", "time",]}
futures = { version = "0.3.4", features = ["bilock","unstable"] }
tokio-util = { version = "0.4.0", features = ["codec"] }
pin-project-lite = "0.1.1"

[dev-dependencies]
clap = "2.10.2"
env_logger = "0.7.0"
url = "2.0.0"
uuid = { version = "0.8.0", features = ["v4"] }
suppositions = "0.1.4"
tokio = {version="0.2.11", features=["macros", "rt-core", "dns"]}
pin-project-lite = "0.1.1"
percent-encoding = "2.1.0"

[features]
# To skip end to end tests on CI
skip-end-to-end = []
