[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
name = "stomping"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.6"
thiserror = "1.0.9"
nom = "7.0.0"
bytes = "1.0.0"
maplit = "1.0.2"
tokio = { version = "1.0.1", features = [] }
futures = { version = "0.3.4", features = ["bilock","unstable"] }
tokio-util = { version = "0.7.0", features = ["codec"] }

[dev-dependencies]
clap = "4.0.8"
env_logger = "0.9.0"
url = "2.0.0"
uuid = { version = "1.0.0", features = ["v4"] }
suppositions = "0.1.4"
tokio = {version="1.0.1", features=["macros", "rt", "net", "time"]}
percent-encoding = "2.1.0"

[features]
# To skip end to end tests on CI
skip-end-to-end = []
