[package]
authors = ["Ceri Storey <ceri@lshift.net>"]
name = "stomping"
version = "0.1.0"
edition = "2018"

[dependencies]
thiserror = "2.0.9"
nom = "7.0.0"
bytes = "1.0.0"
maplit = "1.0.2"
tokio = { version = "1.0.1", features = [] }
futures = { version = "0.3.4", features = ["bilock","unstable"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
tracing = "0.1.40"

[dev-dependencies]
uuid = { version = "1.0.0", features = ["v4"] }
suppositions = "0.1.4"
tokio = {version="1.0.1", features=["macros", "rt", "net", "time"]}
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
anyhow = { version = "1.0.95", features = ["backtrace"] }

[features]
# To run end to end tests on CI
end-to-end = []
